--- a/index.css
+++ b/index.css
@@ -17,6 +17,11 @@ a:link {
     text-decoration: none;
 }
 
+a:visited {
+    color: black;
+    text-decoration: none;
+}
+
 header {
     height: 5%;
     width: 70%;
