--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -7,7 +7,7 @@ body {
     min-height: 100vh;
     width: 100%;
     margin: 0;
-    background-color: #0EEAFF;
+    background-color: #91D8E4;
     image-rendering: pixelated;
     font-family: 'Roboto', sans-serif;
 }
@@ -29,7 +29,7 @@ header {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #fefefe;
+    background-color: #BFEAF5;
     border-radius: 0 0 10px 10px;
 }
 
@@ -73,7 +73,7 @@ nav {
     font-size: 2rem;
     padding: 10px 20px;
     margin: 3px 0;
-    background-color: #fefefe;
+    background-color: #BFEAF5;
     border-radius: 10px;
     gap: 10px;
 }
