--- a/public/styles/store.css
+++ b/public/styles/store.css
@@ -6,7 +6,7 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #0EEAFF;
+    background-color: #91D8E4;
     image-rendering: pixelated;
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -23,7 +23,7 @@ a:visited {
 }
 
 main {
-    background-color: #f0f0f0;
+    background-color: #BFEAF5;
     display: flex;
     flex-direction: column;
     align-items: center;
