--- a/public/styles/wiki.css
+++ b/public/styles/wiki.css
@@ -6,18 +6,18 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #0EEAFF;
+    background-color: #91D8E4;
     image-rendering: pixelated;
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
 
-a:visited {
-    color: blue;
+a:link, a:visited {
+    color: #466F46;
 }
 
 main {
-    background-color: #fefefe;
+    background-color: #BFEAF5;
     display: flex;
     flex-direction: column;
     align-items: center;
