--- a/public/styles/wiki.css
+++ b/public/styles/wiki.css
@@ -16,7 +16,8 @@ a:link, a:visited {
     color: #466F46;
 }
 
-main {
+.content {
+    box-sizing: border-box;
     background-color: #BFEAF5;
     display: flex;
     flex-direction: column;
@@ -28,40 +29,45 @@ main {
     flex-shrink: 0;
     flex-grow: 1;
     border-radius: 10px;
-    padding: 25px;
+    padding: 25px 25px;
     gap: 15px;
 }
 
-main > h1 {
+.content > h1 {
     font-size: 3rem;
     font-weight: 700;
+    padding: 0 10px;
+    text-align: center;
 }
 
-main > hr {
+.content > hr {
     height: 1px;
     background-color: black;
     width: 90%;
     border: none;
 }
 
-main > article {
-    width: 90%;
+.content > main {
+    box-sizing: border-box;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 5px;
+    padding: 0 10px;
 }
 
-article > h2 {
+main h2 {
     font-size: 2rem;
     font-weight: 500;
     margin-top: 15px;
 }
 
-article p {
+main p {
     line-height: 1.2rem;
 }
 
-article > section {
+main article {
+    box-sizing: border-box;
     border: 1px black solid;
     border-radius: 5px;
     width: 100%;
@@ -71,7 +77,7 @@ article > section {
     gap: 5px;
 }
 
-article > section > a {
+main article a {
     font-size: 1.2rem;
 }
 
@@ -81,11 +87,11 @@ article > section > a {
         color: #8EC7D2;
     }
 
-    main {
+    .content {
         background-color: #07485B;
     }
 
-    main > hr {
+    .content > hr {
         background-color: #8EC7D2;
     }
 
@@ -93,39 +99,39 @@ article > section > a {
         color: #DBA507;
     }
 
-    article > section {
+    main > article {
         border: 1px #8EC7D2 solid;
     }
 }
 
 @media (max-width: 600px) {
-    main > h1 {
+    .content > h1 {
         font-size: 2.5rem;
     }
 
-    article > h2 {
+    main > h2 {
         font-size: 1.5rem;
     }
 }
 
 @media (max-width: 430px) {
-    main > h1 {
+    .content > h1 {
         font-size: 2rem;
     }
 
-    article > h2 {
+    main > h2 {
         font-size: 1.2rem;
     }
 
-    article p {
+    p {
         font-size: 0.9rem;
     }
 
-    article > section > a {
+    main > article > a {
         font-size: 1.1rem;
     }
 
-    article > a {
+    main > a {
         font-size: 0.9rem;
     }
 }
