--- a/public/styles/wiki.css
+++ b/public/styles/wiki.css
@@ -36,7 +36,8 @@ a:link, a:visited {
 .content > h1 {
     font-size: 3rem;
     font-weight: 700;
-    padding: 0 10px;
+    margin-top: 10px;
+    margin-bottom: -10px;
     text-align: center;
 }
 
