--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -78,8 +78,14 @@ nav {
     gap: 10px;
 }
 
+nav > * {
+    transition-property: transform;
+    transition-duration: 100ms;
+    transition-timing-function: ease;
+}
+
 nav > *:hover {
-    transform: scale(1.1);
+    transform: scale(1.1) rotate(2deg);
 }
 
 @media (prefers-color-scheme: dark) {
