--- a/public/styles/store.css
+++ b/public/styles/store.css
@@ -86,10 +86,14 @@ main > hr {
 .item-purchase {
     background-color: #00000000;
     border: none;
+    transition-property: transform;
+    transition-duration: 100ms;
+    transition-timing-function: ease;
 }
 
 .item-purchase:hover {
     transform: scale(1.1);
+    cursor: pointer;
 }
 
 .item-purchase:active {
@@ -118,8 +122,14 @@ nav {
     bottom: 3px;
 }
 
+nav > * {
+    transition-property: transform;
+    transition-duration: 100ms;
+    transition-timing-function: ease;
+}
+
 nav > *:hover {
-    transform: scale(1.1);
+    transform: scale(1.1) rotate(2deg);
 }
 
 @media (prefers-color-scheme: dark) {
