--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -89,17 +89,37 @@ nav {
     margin: 3px 0;
     background-color: #BFEAF5;
     border-radius: 10px;
-    gap: 10px;
+    gap: 20px;
 }
 
 nav > * {
+    position: relative;
     transition-property: transform;
     transition-duration: 100ms;
     transition-timing-function: ease;
+    display: flex;
+    justify-content: center;
 }
 
 nav > *:hover {
     transform: scale(1.1) rotate(2deg);
+}
+
+nav > a > p {
+    position: absolute;
+    font-size: 1rem;
+    background-color: #BFEAF5;
+    border-radius: 5px;
+    padding: 5px;
+    bottom: calc(100% + 13px);
+    transform: scale(0);
+    transition-property: transform;
+    transition-duration: 80ms;
+    transition-timing-function: ease-in-out;
+}
+
+nav > a:hover > p {
+    transform: scale(1);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -112,8 +132,9 @@ nav > *:hover {
         background-color: #07485B;
     }
 
-    nav {
+    nav, nav > a > p {
         background-color: #07485B;
+        color: #8EC7D2;
     }
 
     i {
@@ -129,5 +150,10 @@ nav > *:hover {
     header {
         border-radius: 10px 10px 0 0;
         width: 90%;
+    }
+
+    nav > a > p {
+        bottom: auto;
+        top: calc(100% + 13px);
     }
 }
