--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -133,9 +133,14 @@ nav > a:hover > p {
         background-color: #07485B;
     }
 
-    nav, nav > a > p {
+    nav {
         background-color: #07485B;
         color: #8EC7D2;
+    }
+
+    nav > a > p {
+        background-color: black;
+        color: white;
     }
 
     i {
