--- a/public/styles/store.css
+++ b/public/styles/store.css
@@ -40,7 +40,7 @@ main {
     flex-grow: 1;
     border-radius: 10px;
     padding: 25px;
-    gap: 20px;
+    gap: 15px;
 }
 
 main > h1 {
@@ -71,6 +71,9 @@ main > hr:nth-child(2) {
     flex-direction: column;
     width: 90%;
     gap: 2px;
+    border: 1px solid #07485B;
+    padding: 10px 5px;
+    border-radius: 5px;
 }
 
 .item-info-container {
@@ -129,7 +132,7 @@ main > hr:nth-child(2) {
     width: 20px;
 }
 
-.item-amount {
+.item-desc {
     font-size: 0.7rem;
     font-weight: 300;
 }
@@ -199,6 +202,10 @@ nav > a:hover > p {
 
     main > hr {
         background-color: #8EC7D2;
+    }
+
+    .shop-item {
+        border-color: #8fcbd6;
     }
 
     .item-purchase {
