More semantic tags

--- a/public/styles/store.css
+++ b/public/styles/store.css
@@ -148,10 +148,14 @@ nav {
     padding: 10px 20px;
     background-color: #91D8E4;
     border-radius: 10px;
+}
+
+nav > ul, nav > ul > li {
+    display: flex;
     gap: 20px;
 }
 
-nav > * {
+nav > ul > li > a {
     position: relative;
     transition-property: transform;
     transition-duration: 100ms;
@@ -160,11 +164,11 @@ nav > * {
     justify-content: center;
 }
 
-nav > *:hover {
+nav > ul > li:hover {
     transform: scale(1.1) rotate(2deg);
 }
 
-nav > a > p {
+nav > ul > li > a > p {
     position: absolute;
     font-size: 1rem;
     background-color: white;
@@ -178,7 +182,7 @@ nav > a > p {
     transition-timing-function: ease-in-out;
 }
 
-nav > a:hover > p {
+nav > ul > li > a:hover > p {
     transform: scale(1);
 }
 
@@ -221,11 +225,11 @@ nav > a:hover > p {
         color: #07485B;
     }
 
-    nav > a > i {
+    nav a > i {
         color: #07485B;
     }
 
-    nav > a > p {
+    nav a > p {
         background-color: black;
         color: white;
     }
