--- a/public/styles/currency-header.css
+++ b/public/styles/currency-header.css
@@ -3,10 +3,16 @@ header {
     width: 70%;
     max-width: 1200px;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
     background-color: #BFEAF5;
     border-radius: 0 0 10px 10px;
+}
+
+header > ul {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .currency {
