--- a/public/styles/currency-header.css
+++ b/public/styles/currency-header.css
@@ -62,3 +62,37 @@ header > ul {
         background-color: #07485B;
     }
 }
+
+@media (max-width: 800px) {
+    .currency {
+        font-size: 1.25rem;
+        font-weight: 500;
+    }
+}
+
+@media (max-width: 600px) {
+    header {
+        width: 90%;
+    }
+
+    .currency {
+        font-size: 1rem;
+        font-weight: 500;
+    }
+
+    .currency > img {
+        height: 24px;
+    }
+}
+
+@media (max-width: 400px) {
+
+    .currency {
+        font-size: 0.9rem;
+        font-weight: 500;
+    }
+
+    .currency > img {
+        height: 16px;
+    }
+}
