--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -29,7 +29,7 @@ a:visited {
     max-width: 90%;
     flex-grow: 1;
     flex-shrink: 0;
-    aspect-ratio: calc(72/68);
+    aspect-ratio: 72/68;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -130,11 +130,14 @@ nav > a:hover > p {
 
     header {
         border-radius: 10px 10px 0 0;
-        width: 90%;
     }
 
     nav > a > p {
         bottom: auto;
         top: calc(100% + 13px);
+    }
+
+    #clicker-heart {
+        max-width: 80%;
     }
 }
