Fix asides in wiki

--- a/public/styles/wiki-article.css
+++ b/public/styles/wiki-article.css
@@ -57,6 +57,7 @@ nav a:hover {
 .paragraph-with-aside {
     width: calc(100% + 35px + 25vw);
     display: flex;
+    flex-direction: row;
     position: relative;
 }
 
