--- a/public/styles/wiki.css
+++ b/public/styles/wiki.css
@@ -72,6 +72,7 @@ main h2 {
     font-size: 2rem;
     font-weight: 500;
     margin-top: 15px;
+    margin-bottom: 0;
 }
 
 main p {
@@ -97,10 +98,13 @@ main section {
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+main section:first-child {
     margin-top: 15px;
 }
 
-main section h2:first-child {
+main section > h2:first-child {
     margin-top: 0;
 }
 
