--- a/public/styles/wiki-article.css
+++ b/public/styles/wiki-article.css
@@ -8,7 +8,7 @@ nav {
     display: flex;
 }
 
-nav > ul {
+nav>ul {
     box-sizing: border-box;
     width: 100%;
     display: grid;
@@ -24,20 +24,22 @@ nav li {
     flex-shrink: 0;
 }
 
-nav a, nav a:link, nav a:visited {
+nav a,
+nav a:link,
+nav a:visited {
     padding: 10px;
-    box-shadow: 0 1px 5px rgba(0,0,0,.5);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, .5);
     border-radius: 8px;
-    background-color: black;
+    background-color: #07485B;
     color: #BFEAF5;
     text-decoration: none;
-    transition-property: background-color transform border-radius; 
+    transition-property: background-color transform border-radius;
     transition-duration: 150ms;
     transition-timing-function: ease;
 }
 
 nav a:hover {
-    background-color: #1F1F1F;
+    background-color: #0d5970;
     transform: scale(1.05);
     border-radius: 5px;
 }
@@ -61,12 +63,12 @@ nav a:hover {
     position: relative;
 }
 
-.paragraph-with-aside > p,
-.paragraph-with-aside > section {
+.paragraph-with-aside>p,
+.paragraph-with-aside>section {
     width: calc(100% - 35px - 25vw);
 }
 
-.paragraph-with-aside > aside {
+.paragraph-with-aside>aside {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -115,6 +117,41 @@ main ol {
     gap: 7px;
 }
 
+.alert {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 5px;
+    padding: 10px;
+    border-radius: 10px;
+    height: fit-content;
+    gap: 10px;
+    color: #BFEAF5;
+}
+
+.alert.info {
+    background-color: #07485B;
+}
+
+.alert.advice {
+    background-color: #466F46;
+}
+
+.alert.warning {
+    background-color: #b58905;
+}
+
+.alert.danger {
+    background-color: rgb(186, 30, 30);
+}
+
+blockquote {
+    border-left: 5px solid #91D8E4;
+    padding: 15px 0;
+    padding-left: 32px;
+}
+
 @media (max-width: 750px) {
     nav a {
         font-size: 0;
@@ -135,11 +172,11 @@ main ol {
         width: calc(100% + 35px + 30vw);
     }
 
-    .paragraph-with-aside > p {
+    .paragraph-with-aside>p {
         width: calc(100% - 35px - 30vw);
     }
 
-    .paragraph-with-aside > aside {
+    .paragraph-with-aside>aside {
         width: calc(30vw - 40px);
     }
 }
@@ -155,11 +192,11 @@ main ol {
         flex-direction: column;
     }
 
-    .paragraph-with-aside > p {
+    .paragraph-with-aside>p {
         width: 100%;
     }
 
-    .paragraph-with-aside > aside {
+    .paragraph-with-aside>aside {
         width: 100%;
         color: #BFEAF5;
         background-color: black;
@@ -188,11 +225,13 @@ main ol {
 }
 
 @media (prefers-color-scheme: dark) {
-    .paragraph-with-aside > aside {
+    .paragraph-with-aside>aside {
         background-color: #07485B;
     }
 
-    nav a, nav a:link, nav a:visited {
+    nav a,
+    nav a:link,
+    nav a:visited {
         background-color: #8EC7D2;
         color: #07485B;
     }
@@ -201,8 +240,32 @@ main ol {
         background-color: #97d3df;
     }
 
+    .alert {
+        color: #07485B;
+    }
+
+    .alert.info {
+        background-color: #8EC7D2;
+    }
+
+    .alert.advice {
+        background-color: #6bac6b;
+    }
+
+    .alert.warning {
+        background-color: #c8990d;
+    }
+
+    .alert.danger {
+        background-color: rgb(233, 82, 82);
+    }
+
+    blockquote {
+        border-left-color: #0D6986;
+    }
+
     @media (max-width: 550px) {
-        .paragraph-with-aside > aside {
+        .paragraph-with-aside>aside {
             color: #07485B;
             background-color: #8EC7D2;
         }
