--- a/public/styles/store.css
+++ b/public/styles/store.css
@@ -129,6 +129,7 @@ main > hr {
 }
 
 .item-purchase.disabled {
+    background-color: #91D8E4;
     filter: grayscale(100%);
     transform: scale(1);
     cursor: default;
